2006-12-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py (PlaceEntry.set_button): fix tooltips (bug #764)
	* src/glade/gramps.glade: remove static tooltip
	* src/GrampsDb/_ReadGedcom.py (import2): import a readonly file properly (bug #765)

2006-12-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Editors/_EditSourceRef.py,
	* src/Editors/_EditRepoRef.py,
	* src/Editors/_EditUrl.py,
	* src/Editors/_EditMediaRef.py,
	* src/Editors/_EditEventRef.py,
	* src/Editors/_EditFamily.py,
	* src/DisplayTabs/_NameEmbedList.py,
	* src/DisplayTabs/_EmbeddedList.py,
	* src/DisplayTabs/_GalleryTab.py,
	* src/DisplayTabs/_DataEmbedList.py: Disable some more controls when
	readonly

2006-12-14  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/ChangeNames.py (toggled): Add method; 
	(display): Connect renderer to the handling method.

2006-12-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Selectors/_SelectPerson.py: Enable markup for bith date column
	to enable birth fallback in italics (closes #763)

	* src/DataViews/_PedigreeView.py,
	* src/DataViews/_RelationView.py,
	* src/Editors/_EditLdsOrd.py,
	* src/Editors/_EditSourceRef.py,
	* src/Editors/_EditAttribute.py,
	* src/Editors/_EditPerson.py,
	* src/Editors/_EditEventRef.py,
	* src/Editors/_EditName.py,
	* src/DisplayTabs/_ButtonTab.py: Hide some more controls when readonly

2006-12-13  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Family/_RegExpFatherName.py: Add new module.
	* src/Filters/Rules/Family/_RegExpMotherName.py: Add new module.
	* src/Filters/Rules/Family/_RegExpChildName.py: Add new module.
	* src/Filters/SideBar/_FamilySidebarFilter.py (get_filter): Use
	regex filters.
	* src/Filters/Rules/Family/__init__.py: Expose new modules.
	* src/Filters/Rules/Family/Makefile.am: Ship new files.
	* src/GrampsDb/_GrampsDbBase.py (_set_column_order): Correctly
	check for metadata being None.

2006-12-13  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>